# Machine-Learning-Zoomcamp

./: .gitignore  README.md
Homework/Module_1_Homework/: Module_1_Homework_and_Answers.md  m1_homework.py
Homework/Module_2_Homework/: Module_2_Homework_and_Answers.md  m2_homework.py
Homework/Module_3_Homework/: Module_3_Homework_and_Answers.md  m3_homework.py
Homework/Module_4_Homework/: Module_4_Homework_and_Answers.md  m4_homework.py
Homework/Module_5_Homework/: Dockerfile  Module_5_Homework_and_Answers.md  docker_flask_web_service.py  docker_score_client.py  flask_web_service.py  m5_homework.py  readme.md  score_client.py
Homework/Module_6_Homework/: Module_6_Homework_and_Answers.md  m6_homework.py
Homework/Module_8_Homework/: Module_8_Homework_and_Answers.md  m8_homework.ipynb
Homework/Module_9_Homework/: Module_9_Homework_and_Answers.md  prepare_image.py  tf_lite_conversion.py
Homework/Module_z_10_Homework/: Module_10_Homework_and_Answers.md
final-project/: README.md
mid-term-project/: Dict_Vectorizer.pkl  Dockerfile  MinMax_scaler.pkl  README.md  best_model_random_forest.pkl  best_model_xgboost.pkl  docker_predict.py  docker_score_patient.py  notebook.ipynb  predict.py  pyproject.toml  readme.md  score_patient.py  train.py
