[tool.poetry]
name = "mid-term-project"
version = "0.1.0"
description = ""
authors = ["hugi-codes <mindthehug@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^1.26.0"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
kagglehub = "^0.3.4"
xgboost = "^2.1.2"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
